data/derived/sp14/progs/unify/prog3982.ml.out
Characters 76-96:
  bigAdd (mulByDigit (i-1) l)  l;;
         ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
